Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-11760

[Regression] Max purge sequence number is not updated during compaction if drop deletes flag is set to 1.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 3.0
    • 3.0
    • couchbase-bucket
    • Security Level: Public
    • None
    • Triaged
    • Yes
    • June 30 - July 18

    Description

      with recent changes when the drop deletes flag is set to 1, we simply drop the items without updating the max purged sequence number.
      if (ctx->drop_deletes)

      { // all deleted items must be dropped ... return COUCHSTORE_COMPACT_DROP_ITEM; // ...unconditionally }

      this is regression from a few builds ago. we should update max purged sequence number when drop deletes flag is both 0 and 1.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            venu Venu Uppalapati (Inactive)
            venu Venu Uppalapati (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty