MB-11760 track max purge seqno on compactions' deletes

Also update cachedVBStates post compaction

Change-Id: I30dd24ee56ddd9ac3af0f6b2677ed595ec808f59
Reviewed-on: http://review.couchbase.org/39506
Reviewed-by: Chiyoung Seo <chiyoung@couchbase.com>
Tested-by: Sundararaman Sridharan <sundar@couchbase.com>